tests/ui/fail/enum.stderr
error: enums cannot derive Default
 --> tests/ui/fail/enum.rs:3:1
  |
3 | enum Test {
  | ^^^^
